@@ -24,6 +24,7 @@ package sun.nio.fs;
 
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.FileTime;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -31,12 +32,11 @@ import java.util.List;
  * attributes are serialized as a lon (milliseconds from the epoch).
  *
  * <p>
- * This file must be compatible with all Java versions supported by Espresso, strict Java 8
- * compatibility is required.
+ * This file must be compatible with 21+.
  */
 final class TruffleBasicFileAttributes implements BasicFileAttributes {
 
-    static final List<String> BASIC_ATTRIBUTES = List.of(
+    static final List<String> BASIC_ATTRIBUTES = Arrays.asList(
                     "lastModifiedTime",
                     "lastAccessTime",
                     "creationTime",
